# bryanwweber.github.io

./: .gitattributes  .gitignore  .gitmodules  .mise.toml  .taplo.toml  403.html  403.md  404.html  404.md  CNAME  Makefile  README.md  _config.yml  archives.html  authors.html  categories.html  code.html  codebook.toml  cv.html  environment.yml  htaccess  index.html  index.md  index2.html  index3.html  index4.html  index5.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  resume.html  robots.txt  tags.html  tasks.py  work.html  writing.html  writing2.html  writing3.html  writing4.html  (+3 more)
.github/: dependabot.yaml
_includes/: doi.md  pubs.md
_layouts/: cv.html  default.html  post.html  pubs.html
_posts/: 2012-01-10-rotating-detonation-engines-the-wave-of-the-future.md  2012-01-17-economists-try-to-determine-if-increasing-energy-efficiency-always-increases-sustainability.md  2012-01-18-sopa-pipa-protest.md  2012-01-18-what-role-does-the-government-play-in-introducing-a-new-biofuel-to-market.md  2012-01-30-how-the-little-ice-age-was-triggered-and-sustained.md  2012-02-27-send-a-text-message-from-matlab.md  2012-05-19-new-sms-method-autos.md  2012-06-03-why-does-coffee-spill-when-youre-walking.md  2012-07-18-how-to-enable-journal-abbreviations-in-mendeley-bibliographies.md  2012-07-31-get-spotify-without-facebook.md  2012-12-06-entering-operators-in-word-2010-2007.md  2013-07-15-installing-jekyll-on-windows.md  2013-08-15-problems-with-libstdc++-ubuntu.md  2013-12-12-internet-explorer-starts-opening-text-files.md  2014-01-08-installing-cantera-on-ubuntu-12.04.3-from-scratch-source-with-Intel-compilers.md  2014-01-11-fixing-small-notepad++-icons.md  2014-01-11-installing-numpy-scipy-on-ubuntu-12.04.3-from-scratch-source-with-intel-compilers.md  (+17 more)
bib/: pubs.md  (+3 more)
(+201 files in other folders)
