[project]
dependencies = [
  "bulrush>=0.6.3",
  "cssmin>=0.2.0",
  "ghp-import>=2.1.0",
  "invoke>=2.2.0",
  "livereload>=2.6.3",
  "minchin-pelican-plugins-summary>=1.2.1",
  "pelican-pagination>=2.0.1.post1",
  "pelican-redirect>=1.0.2",
  "pelican-webassets>=2.0.0",
  "pelican-yaml-metadata>=2.1.2",
  "pelican>=4.9.1",
  "pymdown-extensions>=10.7.1",
  "smartypants>=2.0.1",
  "typogrify>=2.0.7",
]
requires-python = ">=3.9"
license = { text = "CC BY-SA 3.0" }

[tool.pdm]
distribution = false
