[project]
name = "bryanwweber-github-io"
version = "0.1.0"
description = "My website"
authors = [{ name = "Bryan Weber", email = "bryan.w.weber@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "bulrush>=0.6.3",
    "cssmin>=0.2.0",
    "ghp-import>=2.1.0",
    "invoke>=2.2.0",
    "livereload>=2.7.0",
    "minchin-pelican-plugins-summary>=1.3.0",
    "pelican-pagination>=2.0.1.post1",
    "pelican-redirect>=1.0.2",
    "pelican-webassets>=2.0.0",
    "pelican-yaml-metadata>=2.1.2",
    "pelican>=4.10.1",
    "pymdown-extensions>=10.11.2",
    "smartypants>=2.0.1",
    "typogrify>=2.0.7",
]
